Fix Java 8 Compatability